release 1.4 (08-2010)
- Integrated JRebel support from branch
  Introduced new experimental module (jersey-jrebel) + some necessary
  modifications in jersey-server to improve reloading support.
- Fixed issue 542
  https://jersey.dev.java.net/issues/show_bug.cgi?id=542
  Added client HTTPDigestAuthFilter from external contributor + tests
- Fixed issue 549
  https://jersey.dev.java.net/issues/show_bug.cgi?id=549
  Implicit HEAD method support was not re-using any resource method-specific
  filters on the GET method from which the HEAD method was derived from.
- Fixed issue 547
  https://jersey.dev.java.net/issues/show_bug.cgi?id=547
  The GZIPContentEncodingFilter works correctly with the Client API and
  HttpURLConnection when a request entity is sent for which the size is known
  in advance, for example a File or byte[].
- Fixed issue 506
  https://jersey.dev.java.net/issues/show_bug.cgi?id=506
  Fixed regression. Servlet url patterns of the form
        <url-pattern>*.xxx</url-pattern>
  now function as was the case for Jersey 1.0.3.1.

release 1.3 (17-06-2010)
- Fixed issue 540
  https://jersey.dev.java.net/issues/show_bug.cgi?id=540
  Parameterized types of List/Set/SortedSet are supported for parameters,
  for example @QueryParam("d") List<List<String>>, if there is a
  StringReaderProvider registered that supports the type List<String>.
- Remove the restriction that a GET method cannot receive entities. Warnings
  will be presented instead of errors. Although this is highly uncommon The HTTP
  spec does not rule this out thus Jersey was being unduly restrictive.
- Fixed issue 543
  https://jersey.dev.java.net/issues/show_bug.cgi?id=543
  unable to build extended-wadl-webapp sample
- Fixed issue 293
  https://jersey.dev.java.net/issues/show_bug.cgi?id=293
  The response building will retain the StatusType (if explictly set) or those
  defined on javax.ws.rs.core.Response.Status. The container may access the