@@ -1,4 +1,6 @@
 release 1.4 (08-2010)
+- *Breaking change*: in order to prevent OSGi bundle reload issues
+  we need to bundle JSR-311 API classes with the jersey-core module
 - Integrated JRebel support from branch
   Introduced new experimental module (jersey-jrebel) + some necessary
   modifications in jersey-server to improve reloading support.
